[build-system]
requires = [
  "setuptools>=42",
  "wheel"
]
build-backend = "setuptools.build_meta"

[project]
dependencies = [
   'certifi == 2021.5.30',
   'charset-normalizer == 2.0.6',
   'click == 8.0.1',
   'gitdb == 4.0.7',
   'GitPython == 3.1.24',
   'idna == 3.2',
   'Jinja2 == 3.0.1',
   'MarkupSafe == 2.0.1',
   'passpy == 1.0.2',
   'pyperclip == 1.8.2',
   'python-gnupg == 0.4.7',
   'requests == 2.26.0',
   'ruamel.yaml == 0.17.16',
   'ruamel.yaml.clib == 0.2.6',
   'smmap == 4.0.0',
   'typing-extensions == 3.10.0.2',
   'urllib3 == 1.26.7',
]


[tool.black]
line-length = 79

[tool.pylint.'MESSAGES CONTROL']
disable = [
        "consider-using-f-string"
]

[tool.isort]
profile = "black"
line_length = 79
