[build-system]
requires = [
  "setuptools>=42",
  "wheel"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79

[tool.pylint.'MESSAGES CONTROL']
disable = [
        "consider-using-f-string",
        "missing-module-docstring",
        "missing-class-docstring",
        "missing-function-docstring",
]

[tool.isort]
profile = "black"
line_length = 79
