[metadata]
name = ghaudit
version = 0.4.0
description = github security audit tools
long_description = file: README.md
author = Scality security team
author_email = "Kevin Gruber" <kevin.gruber@scality.com>
maintainer = Kevin Gruber
maintainer_email = kevin.gruber@scality.com
url = https://github.com/scality/ghaudit
classifiers =
Intended Audience :: System Administrators
Operating System :: POSIX :: Linux
Programming Language :: Python :: 3
Topic :: Security

[options]
package_dir =
  = src
packages = find:

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
  ghaudit = ghaudit.__main__:main
