[metadata]
name = ghaudit
version = 0.4.0
description = github security audit tools
long_description = file: README.md
author = Scality security team
author_email = "Kevin Gruber" <kevin.gruber@scality.com>
maintainer = Kevin Gruber
maintainer_email = kevin.gruber@scality.com
url = https://github.com/scality/ghaudit
classifiers =
Intended Audience :: System Administrators
Operating System :: POSIX :: Linux
Programming Language :: Python :: 3
Topic :: Security

[options]
package_dir =
  = src
packages = find:

install_requires = 
  certifi == 2021.5.30
  charset-normalizer == 2.0.6
  click == 8.0.3
  gitdb == 4.0.7
  GitPython == 3.1.24
  idna == 3.2
  Jinja2 == 3.0.1
  MarkupSafe == 2.0.1
  passpy == 1.0.2
  pyperclip == 1.8.2
  python-gnupg == 0.4.7
  requests == 2.26.0
  ruamel.yaml == 0.17.16
  ruamel.yaml.clib == 0.2.6
  smmap == 4.0.0
  typing-extensions == 3.10.0.2
  urllib3 == 1.26.7

include-package-data = True

[options.package_data]
ghaudit =
  data/fragments/*.j2
  py.typed

[options.data_files]
share/ghaudit/fragments = data/fragments/*.j2

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
  ghaudit = ghaudit.__main__:main
